Update deploy.yml with final comments

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -95,4 +95,4 @@ jobs:
       #       sudo systemctl restart php-fpm-VERSION.service
       #       echo "PHP-FPM restart command executed."
 
-Update.
+Then thin water maker. 
